# eeg-music-code

./: .gitmodules  README.md  pyproject.toml
nix/: devenv.nix
notes/: ideas.md  plan.md
src/eeg_music/: analyze_music_channel.py  analyze_music_channel_detailed.py  band_power.py  band_power_calc.py  bcmi.py  bcmi_create_ica_datasets_exp1.ipynb  bcmi_create_ica_datasets_noaveraging.ipynb  check_onset_detection.ipynb  classifiers_preprocessing.ipynb  cnn.py  create_binary_classification_dataset.ipynb  create_dataloaders_scores.ipynb  create_dataset_clean.ipynb  create_musing.ipynb  data.py  dataloader.py  dtw_experiments.ipynb  eeg_music_reconstruction.ipynb  eegnet.py  eegpt.py  emotion_eegnet.py  emotion_utils.py  ensamble_song_classification.py  ica_analysis.py  lstm.py  mel_preprocessing.ipynb  mel_training.py  musin_g_loader_demo.ipynb  musing_analysis.ipynb  noteonsets_training.py  odf_preprocessing.ipynb  onset_conversion.py  onset_markers.py  onset_odf_detection.py  plotting.py  run.py  run_bcmi_emotion.py  (+27 more)
tests/: test_accuracy_callback.py  test_array_stratified_sampling.py  test_auroc_callback.py  test_band_power.py  test_binary_accuracy_calc.py  test_binary_emotion_eegnet.py  test_cumulative_stats.py  test_data_loaders.py  test_eegmusicdataset_workflows.py  test_eegnet.py  test_eegnet_subject_specific.py  test_emotion_eegnet.py  test_freeze_utils.py  test_load_and_create_sleep_dataloaders.py  test_musing_eegnet.py  test_plotting.py  test_robust_normalized_dataset.py  test_sleepedf_dataset.py  test_subject_specific_linear.py  test_training.py
