[project]
name = "eeg_music"
version = "0.1.0"
description = "Minimal project setup"

requires-python = "==3.12.11"
dependencies = [
  "pip",
  "braindecode",
  "openneuro-py",
  # "scipy==1.10.1", # "scipy>=1.7.3,<=1.10.1",
  "scipy==1.12.0",
  "mne",
  "mne-lsl",
  "mne-icalabel",
  "mne-bids[full]",
  "numpy",
  # "h5py",
  "mat73",
  "matplotlib",
  "pandas<3.0.0",
  "kaleido",
  "librosa",
  "pydub",
  # "ffprobe",
  "essentia",
  "resampy",
  # "jupyterlab",
  "ipykernel",
  "ipython",
  "jupyter",
  "notebook",
  "torch",
  "torcheeg",
  "speechbrain",
  "peft",
  "transformers",
  "wandb",
  "lightning",
  "lightning-sdk",
  "scikit-image",
  "seaborn",
  "scikit-learn",
  "py-ssa-lib",
  "xgboost",
  "fastdtw",
  "tslearn",

  "eegpt",
]

[tool.uv.sources]
eegpt = { path = "./submodules/EEGPT" }
# pymssa = { path = "./submodules/pymssa" }

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "pytest-cov",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pyright]
venvPath = ".devenv/state"
venv = "venv"

[tool.ruff]
indent-width = 2

[tool.ruff.format]
indent-style = "space"
